Fix bug in social bar resizing on small screen

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -128,3 +128,10 @@ img {
   height: 70px;
   width: 70px;
 }
+
+@media screen and (max-width: 430px) {
+  .social-button {
+    height: 60px;
+    width: 60px;
+  }
+}
